<resources>
    <string name="app_name">城农通</string>

    <string name="welcome_tips">您可以发送文字给我，然后我会将消息反馈给客服人员。</string>

    <string-array name="reply_tips">
        <item>发送成功，您可以点击右上角的调色板更换消息颜色哦~</item>
        <item>消息已经发送给您的设备芯居。</item>
        <item>已经发送了，芯居还可以更换颜色哦，点击右上角试一下~</item>
        <item>点击右上角换个颜色换个心情吧~</item>
        <item>芯居很高兴为您服务~</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--登录注册页面-->
    <string name="login_username_error">请输入有效账号</string>
    <string name="login_password_error">请输入密码</string>
    <string name="password">密码</string>
    <string name="re_password">重复密码</string>
    <string name="username">用户名</string>
    <string name="phone">手机号</string>
    <string name="signup">创建账号</string>
    <string name="login">登录</string>
    <string name="jump_login">已有账号？马上登陆</string>
    <string name="jump_signup">没有账号？创建一个</string>
    <!--发布页面-->
    <string name="push_title">信息标题</string>
    <string name="select_mou_tip">请点击输入框选择分类：</string>
    <string name="select_mou">请选择分类</string>
    <string name="desc_push_sale">请认真填写产品介绍，才能让更多的客户联系您</string>
    <string name="push_pic">上传图片</string>
    <string name="push_price">产品价格:</string>
    <string name="yuan">元</string>
    <string name="click_push">确认发布</string>
    <string name="buy_tips">请认真填写下表，提交您的求购信息。我们讲免费帮您寻找物美价廉的货源。</string>
    <string name="buy_name">产品采购名称</string>
    <string name="buy_count">采购数量</string>
    <string name="your_ask">您的要求</string>
    <string name="your_ask_detail">请尽可能详细地填写您的求购需求</string>

    <!--关于页面-->
    <string name="app_agreement_title">用户协议</string>
    <string name="app_agreement">
        请您在使用本软件前仔细阅读如下条款。包括免除或者限制作者责任的免责条款及对用户的权利限制。
        您的安装使用行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。
        \n \n 一、本《协议》授予您下列权利：\n " "您可安装无限制数量的本软件产品来使用。
        您可以复制、分发和传播无限制数量的软件产品，但您必须保证每一份复制、分发和传播都必须是完整和真实的，
        包括所有有关本软件产品的软件、版权、亦包括本协议。\n \n 二、用户无权实施包括但不限于下列行为：\n
        " "不得通过反编译等手段任意修改本软件的代码并随意传播（目的仅是开发爱好者用于交流的除外），
        任何对于本软件修改的公开发布，均必须由本软件作者完成。本软件作者保留对侵权行为采取法律允许的措施的权利。\n
        用户不得利用本软件误导、欺骗他人。\n
        \n 三、本软件以学习交流为目的，承诺不会有以下（包括但不局限于）获取您的隐私或产生费用的行为，请您放心使用!:)\n
        1、发送短信;\n
        2、拨打电话;\n
        3、监听通话;\n
        4、获取通话状态;\n
        5、读取短信记录;\n
        \n 四、 免责声明\n
        任何使用盗版软件造成的问题均与本软件作者无关。\n
    如果您在使用时遇到任何问题，或者对本软件的代码有任何优化意见，欢迎联系本软件的作者:xxx
    软件名:城农通APP \n 作者：XXX \n 指导老师：XX\n</string>
    <string name="app_about_title">关于信息</string>
    <string name="app_about">本软件为XXX毕业设计\n指导老师是XXX.</string>
    <string name="app_version">版本：1.0</string>

    <!--主页面-->
    <string name="new_buy">最新求购</string>
    <string name="more">更多</string>
    <string name="phone_call">电话咨询</string>


    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新朋友</string>

    <string name="chat">陌生人聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>


</resources>
