<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <!--<include layout="@layout/layout_title_bar" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="18dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/buy_tips"
                android:textColor="#f00"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/buy_name"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_push_wantbuy_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/et_bg"
                android:hint="@string/push_title"
                android:padding="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_select_mou_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:background="@drawable/et_bg"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="18dp"
                android:paddingTop="12dp"
                android:text="@string/select_mou"

                android:textColor="#1f1f1f"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/buy_count" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_push_wantbuy_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="4"
                    android:background="@drawable/et_bg"
                    android:gravity="top"
                    android:hint="@string/buy_count"
                    android:padding="12dp"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/sp_push_buy_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="3"
                    android:entries="@array/unites"
                    android:padding="4dp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/your_ask" />

            <EditText
                android:id="@+id/et_push_wantbuy_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:gravity="top"
                android:hint="@string/your_ask_detail"
                android:lines="6"
                android:padding="8dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_push_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#fe9816"
                android:text="@string/click_push"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
