<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include layout="@layout/layout_title_bar" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:padding="3dp"
                android:text="产品供应名称"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_push_sale_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/et_bg"
                android:hint="@string/push_title"
                android:padding="6dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:padding="3dp"
                android:text="@string/select_mou_tip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_select_mou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/et_bg"
                android:padding="6dp"
                android:text="@string/select_mou"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:padding="3dp"
                android:text="产品描述"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_push_sale_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/et_bg"
                android:gravity="top"
                android:hint="@string/desc_push_sale"
                android:lines="5"
                android:padding="5dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:text="@string/push_price" />

                <EditText
                    android:layout_width="0dp"
                    android:id="@+id/et_push_sale_price"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:background="@drawable/et_bg"
                    android:padding="4dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:text="@string/yuan" />

                <EditText
                    android:id="@+id/et_push_sale_peice_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="3"
                    android:background="@drawable/et_bg"
                    android:padding="4dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:padding="3dp"
                android:text="产品图片"
                android:textSize="15sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:divider="@null"
                android:fadingEdge="none"
                android:listSelector="@android:color/transparent"
                android:scrollbarStyle="outsideOverlay"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="4"
                tools:listitem="@layout/list_item_image" />

            <Button
                android:id="@+id/bt_push_sale_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#fe9816"
                android:text="@string/click_push"
                android:textColor="#fff"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
